--- a/content/pages/index.mdx
+++ b/content/pages/index.mdx
@@ -1,6 +1,6 @@
 <SEO title="Home" />
 
-# Gatsby Starter Catalyst
+# Resources for Students in CS
 
 Basic starter that could be used as a barebones starting point for building a finished website. Implements `gatsby-theme-catalyst-core`, `gatsby-theme-catalyst-header-top`, and `gatsby-theme-catalyst-footer`.
 
