add first component

--- a/content/pages/index.mdx
+++ b/content/pages/index.mdx
@@ -1,6 +1,8 @@
-<SEO title="Home" />
+import Resource from "../../src/components/resource"
 
 # Resources for Students in CS
+
+<Resource/>
 
 Basic starter that could be used as a barebones starting point for building a finished website. Implements `gatsby-theme-catalyst-core`, `gatsby-theme-catalyst-header-top`, and `gatsby-theme-catalyst-footer`.
 
